# raspberry_pi_for_berizka

./: .gitignore  CMakeLists.txt  README.md  config.json  config.json.example  echo  main.cpp  README.md
common/: CMakeLists.txt
common/Scr/: logger.cpp
common/include/: AppController.hpp  ConfigManager.hpp  MessageParser.hpp  MqttService.hpp  ThreadSafeQueue.hpp  ThreadSafeQueue.tpp  UartBackgroundService.hpp  UartInterface.hpp  logger.hpp
common/src/: AppController.cpp  ConfigManager.cpp  MessageParser.cpp  MqttService.cpp  UartBackgroundService.cpp  UartInterface.cpp  logger.cpp
